# UA1198ForumSB

./: .gitignore  .pylintrc  Dockerfile  Dockerfile.smtp  Dockerfile.web  Makefile  docker-compose.yml  package-lock.json  pyproject.toml
.github/workflows/: django-test.yml  lint.yml  package-publisher.yml  security-audit-updates.yml
Forum/Forum/: settings.py  urls.py
etc/: nginx.conf
forum/: .env.test  Dockerfile  docker-compose.yml  manage.py  requirements.txt
forum/communications/: apps.py  channelsmiddleware.py  consumers.py  exceptions.py  helpers.py  mongo_models.py  permissions.py  serializers.py  tests.py  urls.py  utils.py  validators.py  views.py  ws_routing.py
forum/forum/: asgi.py  celery.py  config.py  logging.py  settings.py  tasks.py  tests_setup.py  urls.py  utils.py
forum/investors/: admin.py  models.py  permissions.py  serializers.py  tests.py  views.py
forum/notifications/: serializers.py  services.py  urls.py  utils.py  views.py
forum/projects/: admin.py  consumers.py  models.py  notifications.py  permissions.py  routing.py  serializers.py  services.py  tests.py  urls.py  utils.py  views.py
forum/startups/: admin.py  helpers.py  models.py  serializers.py  tests.py  urls.py  views.py
forum/users/: admin.py  models.py  permissions.py  serializers.py  swagger_auto_schema_settings.py  tests.py  throttling.py  urls.py  utils.py  validators.py  views.py
forum_frontend/: package-lock.json  package.json
forum_frontend/src/: App.css  App.js  index.js
forum_frontend/src/forms/: Input.js
kubernetes/: celery-beat-deployment.yaml  celery-worker-deployment.yaml  configmap.yaml  forum-deployment.yaml  forum-service.yaml  ingress.yaml  mongo-deployment.yaml  postgresql-deployment.yaml  redis-deployment.yaml  secret.yaml  web-deployment.yaml
scripts/: README.md  generate_kubernetes_secrets.sh  http_client_notification.py  list_urls.sh  requirements.txt  run_proxy.sh  run_smtp_server.sh  setup_kubernetes_login_creds.py  websocket_client.py
scripts/proxy/: Dockerfile
(+50 files in other folders)
